# coverwhat

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  Roadmap.md  files.cmake  init-avr-linux.sh  platformio.ini
Sketches/Marker/: Marker.ino
cmake/: avr.cmake  coverage.cmake  pc.cmake
docs/: CHANGELOG.md  Readme.md
features/v1/: Vampire.gherkin
features/v1.1/: FirstGame.gherkin
hardware/: marker-cache.lib  marker.kicad_pcb  marker.sch  marker.xml
include/actions/: StringActionFactory.h
include/actors/: Weapon.h
include/api/: Actor.h  IAction.h  ITransport.h  Meta.h
include/common/: meta.h
include/hardware/: Hardware.h  IHardware.h  Simulated.h
include/hardware/avr/: Atmega328p.h
include/hardware/simulator/: Simulator.h
include/marker/: Marker.h
include/tools/: RGBColor.h
include/transports/: Dummy.h  Software.h
include/ui/: BluetoothElectronicUi.h  ConsoleUi.h  SerialUi.h
include/weapons/: Vampire.h
scripts/: init-avr-linux.sh  lintUpdated
software/: files.cmake
software/include/actions/: StringActionFactory.h
software/include/actors/: Player.h  Weapon.h
software/include/api/: Action.h  Actor.h  Entity.h  IAction.h  IHardware.h  ITransport.h  IUi.h  Meta.h  Team.h
software/include/hardware/avr/: Atmega328p.h
software/include/hardware/simulator/: Simulator.h
software/include/player/: Player.h
software/include/tools/: RGBColor.h  Timer.h
software/include/transports/: Dummy.h  InfraredRc5.h  Software.h
software/include/ui/: BluetoothElectronicUi.h  ConsoleUi.h  SerialUi.h  Ssd1306Ui.h
software/include/weapons/: Vampire.h
software/src/api/: Actor.cpp  IHardware.cpp
software/src/hardware/simulator/: Simulator.cpp
software/src/marker/: Marker.cpp
software/src/player/: ConsolePlayer.cpp  PlayerAvr.cpp
software/src/transports/: Software.cpp
software/src/ui/: ConsoleUi.cpp  Ssd1306Ui.cpp
software/src/weapons/: Vampire.cpp
software/tests/: ActionTest.cpp  Atmega328pTest.cpp  ConsoleUiTest.cpp  DummyTransportTest.cpp  EntityTest.cpp  InfraredRc5Test.cpp  PlayerTest.cpp  RGBColorTest.cpp  SimulatorTest.cpp  SoftwareTransportTest.cpp  StringActionFactoryTest.cpp  VampireTest.cpp  WeaponTest.cpp
sources/: files.cmake  report.txt
sources/include/actors/: Player.h
sources/include/api/: Action.h  Actor.h  Entity.h  IHardware.h  ITransport.h  Meta.h
sources/include/hardware/avr/: Atmega328p.h
sources/include/hardware/simulator/: Simulator.h
sources/include/tools/: Timer.h
sources/include/transports/: Dummy.h  Software.h
sources/include/ui/: ConsoleUi.h  SerialUi.h
sources/include/weapons/: Vampire.h
sources/src/api/: Actor.cpp  IHardware.cpp  ITransport.cpp
sources/src/hardware/simulator/: Simulator.cpp
sources/src/player/: Player.cpp
sources/src/weapons/: Vampire.cpp
sources/tests/: ActionTest.cpp  Atmega328pTest.cpp  DummyTransportTest.cpp  EntityTest.cpp  SimulatorTest.cpp  SoftwareTransportTest.cpp  VampireTest.cpp  WeaponTest.cpp
src/api/: IHardware.cpp
src/hardware/: IHardware.cpp  Simulated.cpp
src/marker/: Marker.cpp  marker.cpp
src/player/: ConsolePlayer.cpp  player.cpp
src/ui/: ConsoleUi.cpp
src/weapons/: Vampire.cpp
tests/: EntityTest.cpp  RGBColorTest.cpp  SimulatedHardwareTest.cpp  SoftwareTransportTest.cpp  StringActionFactoryTest.cpp  VampireTest.cpp  WeaponTest.cpp
tools/cmake/: avr.cmake  coverage.cmake  pc.cmake
tools/scripts/: avr-report.sh  init-avr-linux.sh  init-avr-windows.bat  lintUpdated
